--- a/zerops.yml
+++ b/zerops.yml
@@ -5,7 +5,7 @@ zerops:
       buildCommands:
         - npm i
         - npm run build
-      deploy:
+      deployFiles:
         - ./dist/recipe-backend-ui/browser/~
     run:
       base: static
