--- a/zerops.yml
+++ b/zerops.yml
@@ -8,7 +8,8 @@ zerops:
       deployFiles:
         - ./dist/recipe-backend-ui/browser/~
     run:
-      base: static
+      base: nginx@latest
+      siteConfigPath: site.conf
       envVariables:
         API_URL: ${api_zeropsSubdomain}
       routing:
